--- a/assets/css/questions.css
+++ b/assets/css/questions.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 .main{
@@ -78,6 +79,17 @@ h1{
     align-items: center;
     flex-direction: column;
 }
+.rectangle2{
+    z-index: 9;
+    box-sizing: border-box;
+    position: absolute;
+    width:100%;
+    height:100%;
+    top: 10px;
+    left: 10px;
+    border: 2px solid #FFFFFF;
+    /*border-radius: 10px;*/
+}
 
 
 .icon{
@@ -142,7 +154,9 @@ a{
     justify-content: center;
     align-items: center;
 }
-
+textarea {
+    font-size: 100px;
+}
 
 .modal-content {
     background-color: #000;
@@ -160,7 +174,7 @@ a{
     top: 0;
     left: 0;
     border: 2px solid #FFFFFF;
-    border-radius: 10px;
+    border-radius: 0;
 }
 .modal-overlay{
 
@@ -169,6 +183,7 @@ a{
     display: flex;
     align-items: center;
     flex-direction: column;
+    border-radius: 10px;
 }
 .modal-heading{
     margin: 15px;
