--- a/assets/css/instructions.css
+++ b/assets/css/instructions.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'MonografRegular';
-  src: url(../fonts/MonografRegular.ttf);
+  src: url(../fonts/MonografTextRegular.ttf);
   font-weight: 700;
 }
 
